--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_reviews \n",
+    "total_reviews = 0\n",
     "total_reviews # 3420"
    ]
   },
