--- a/index.ipynb
+++ b/index.ipynb
@@ -521,7 +521,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda x: x['price']))"
+    "    return list(filter(lambda x: len(x['price']) == 1, restaurants)"
    ]
   },
   {
