--- a/index.ipynb
+++ b/index.ipynb
@@ -568,7 +568,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    pass"
+    "    return list(filter(lambda x: x['review+coun']))"
    ]
   },
   {
